HikariCP flex, Lettuce yeeted 🍃
DB now rocking HikariCP (supports H2, MySQL, MariaDB, PostgreSQL – not perfect but runs 🔥)
Redis switched from that obese 7MB Lettuce to lean Jedis 🧠
Finally added a proper README so it doesn’t look like a ghost project 📜

Next update plan:
- Weight reduction (trim the bloat)
- Speed improvement attempt ⚡